
apply plugin: 'java'
version '0.1'


sourceCompatibility = 1.8
targetCompatibility = 1.8

repositories {
        mavenCentral()
}

dependencies {
        compile 'org.elasticsearch:elasticsearch:2.2.2'
        compile 'com.fasterxml.jackson.core:jackson-annotations:2.7.2'
        compile 'com.ibm.icu:icu4j:56.1'
        compile 'com.zaxxer:HikariCP:2.4.4'
        compile 'redis.clients:jedis:2.8.0'
        compile 'com.nanohttpd:nanohttpd:2.2.0'
        compile 'commons-io:commons-io:2.4'
        compile 'commons-cli:commons-cli:1.3.1'
        compile 'org.apache.httpcomponents:httpclient:4.5.2'
        compile 'commons-httpclient:commons-httpclient:3.1' //used for a single class UrlUtil that has ben deprecated
        compile 'org.apache.commons:commons-lang3:3.4'
        compile 'com.fasterxml.jackson.core:jackson-databind:2.7.2'
        compile 'com.fasterxml.jackson.core:jackson-core:2.7.2'
        compile 'com.fasterxml.jackson.core:jackson-annotations:2.7.2'
        compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.5'
        testCompile group: 'junit', name: 'junit', version: '4.11'
}



